--- a/style.css
+++ b/style.css
@@ -1,68 +1,67 @@
 body {
-    background-color: #222222;
-    text-align: center;
-    font-family: arial;
-    color: white;
+  background-color: #222222;
+  text-align: center;
+  font-family: arial;
+  color: white;
 }
 
 #title {
-    font-size:50px;
-    padding-top: 7%;
-    padding-bottom: 3%;
+  font-size: 50px;
+  padding-top: 7%;
+  padding-bottom: 3%;
 }
 
 #logo {
-    border: solid white 7px;
-    border-radius: 50%;
-    height: 500;
-    transition: transform .8s ease-in-out;
-
+  border: solid white 7px;
+  border-radius: 50%;
+  height: 500;
+  transition: transform .8s ease-in-out;
 }
 
 #logo:hover {
-    transform: rotate(360deg);
-    box-shadow: 0px 0px 30px 0px white;
+  transform: rotate(360deg) scale(1.05);
+  box-shadow: 0px 0px 30px 0px white;
 }
-
-#playlists-wrapper{
-    padding-top:10%;
-    padding-bottom:10%;
-}
-
 
 /*HOVER ALBUM COVERS*/
 
+#playlists-wrapper {
+  padding-top: 10%;
+  padding-bottom: 10%;
+}
+
 ul.playlists {
-  margin:0;
+  margin: 0;
   padding: 0;
   text-align: center;
 }
 
 ul.playlists li {
+  /*this changes the spacing between each album*/
+  margin-left:-5px;
   display: inline-block;
   position: relative;
   width: 500px;
 }
 
-p{
+p {
   padding-top: 35%;
 }
 
-span.text-content {
+span.text {
   font-family: Carrois Gothic SC;
-  font-size:40px;
-  background: rgba(0,0,0,0.5);
+  font-size: 40px;
+  background: rgba(0, 0, 0, 0.5);
   color: white;
   height: 500px;
+  top:0;
   left: 0;
   position: absolute;
-  top: 0;
   width: 500px;
   opacity: 0;
   transition: opacity 500ms;
 }
 
-
-ul.playlists li:hover span.text-content {
+ul.playlists li:hover span.text {
   opacity: 1;
 }
